# preswald

./: README.md  hello.py  preswald.toml  pyproject.toml  secrets.toml
data/: sample.csv
